--- a/index.html
+++ b/index.html
@@ -74,5 +74,14 @@
             <a href="https://youtube.com/@minecartertmm?si=yUC2Q00etG2qg_96" target="_blank" class="button">📺 Visit My YouTube!</a>
         </p>
     </section>
+    <section id="rights">
+        <p>programmed and developed by callum tan.</p>
+        <p>
+            <a href="https://github.com/caltan3" target="_blank" class="button">GitHub Page</a>
+        </p>
+    </section>
+    <footer>
+        <p>&copy; 2025 Callum Tan. All rights reserved.</p>
+    </footer>
 </body>
 </html>
