--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a href="https://github.com/caltan3" target="_blank" class="button">GitHub Page</a>
         </p>
     </section>
-    <footer>
+    <footer class="rights">
         <p>&copy; 2025 Callum Tan. All rights reserved.</p>
     </footer>
 </body>
