--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
             <a href="https://github.com/caltan3" target="_blank" class="button">GitHub Page</a>
         </p>
     </section>
-    <footer class="rights">
-        <p>&copy; 2025 Callum Tan. All rights reserved.</p>
+    <footer>
+        <p>&copy; 2025 Callum Tan. All Rights Reserved.</p>
+        <p class="license-text"></p>
     </footer>
+    
 </body>
 </html>
